# llm-cognitive-crawler

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: api_keys.example.env
docs/: howto.md  testplan.md
docs/research-planning/: approach-comparison-analysis.md  cognitive-crawler-extension-plan.md
src/llm_cognitive_crawler/: __init__.py
src/llm_cognitive_crawler/core/: __init__.py  bayesian_engine.py  crawler.py  data_models.py  dynamic_hypothesis_generator.py
src/llm_cognitive_crawler/hypotheses/: __init__.py  base.py  bias_hypotheses.py  domain_hypotheses.py  hypothesis_manager.py  reasoning_hypotheses.py  risk_hypotheses.py  social_hypotheses.py
src/llm_cognitive_crawler/models/: __init__.py  base.py  ollama_provider.py
src/llm_cognitive_crawler/scenarios/: __init__.py  base.py  ethical_scenarios.py  logical_scenarios.py  risk_scenarios.py  scientific_scenarios.py  social_scenarios.py
tests/: __init__.py  test_bayesian_engine.py  test_crawler.py  test_data_models.py  test_dynamic_hypothesis_generation.py  test_hypotheses.py  test_ollama_provider.py  test_scenarios.py
tmp/: scratchpad.md
