[project]
name = "llm-cognitive-crawler"
version = "0.1.0"
description = "Bayesian Inverse Planning for Reverse Engineering LLM Mental Models and Cognitive Patterns"
readme = "README.md"
authors = [
    { name = "prof-schacht", email = "schacht@prof-schacht.de" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "jsonlines>=3.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
llm-cognitive-crawler = "llm_cognitive_crawler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]
